prevent image from jumping when changing from view to edit

--- a/www-develop/css/profile.css
+++ b/www-develop/css/profile.css
@@ -120,6 +120,7 @@
 .profile .list.edit {
     margin-left: 15px;
     margin-right: 15px;
+    padding-top: 17px;
 }
 
 .profile .list.edit textarea {
